syntax = "proto3";

option csharp_namespace = "Polls.gRPC";

package polls;

service PollsGreeter {
  // Sends a greeting
  rpc ListPolls (ListPollsRequest) returns (ListPollsResponse);
}

// The request message containing the user's name.
message ListPollsRequest {
  int32 offset = 1;
  int32 limit = 2;
  string searchParam = 3;
}

// The response message containing the greetings.
message ListPollsResponse {
  repeated ListPollsDto records = 1;
  int64 totalRecords = 2;
}

 message ListPollsDto {
   int64 id = 1;
   string name = 2;
   string description = 3;
}
